@@ -11,6 +11,9 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>Synchronize implementation of <code><span>objc.inject</span></code> with mach_* 1.1.
+Now injects on main thread by default, takes third useMainThread
+argument to change this behavior.</li>
 <li>Fixed bug in the NSBundle hack that caused a NULL pointer to be
 dereferenced if looking up a non-existent class using NSBundle API.</li>
 <li>Added <code><span>OC_PythonUnicode</span></code> and <code><span>OC_PythonString</span></code> classes that
